--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>Hey</h1>
-    <h2>Hello</h2>
+    <title>Box Layout</title>
 </head>
 <body>
-    
+    <div class="container">
+        <!-- Top Row: Three Small Boxes -->
+        <div class="row top-row">
+            <div class="box small-box">Box 1</div>
+            <div class="box small-box">Box 2</div>
+            <div class="box small-box">Box 3</div>
+        </div>
+
+        <!-- Bottom Row: Two Big Box -->
+        <div class="row bottom-row">
+            <div class="box big-box">Box 4</div>
+            <div class="box big-box">Box 5</div>
+        </div>
+    </div>
 </body>
 </html>
