--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <div class="container">
         <!-- Top Row: Three Small Boxes -->
-        <div class="row top-row">
+        <div class="row-top-row">
             <div class="box small-box">Box 1</div>
             <div class="box small-box">Box 2</div>
             <div class="box small-box">Box 3</div>
         </div>
 
         <!-- Bottom Row: Two Big Box -->
-        <div class="row bottom-row">
+        <div class="row-bottom-row">
             <div class="box big-box">Box 4</div>
             <div class="box big-box">Box 5</div>
         </div>
